--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,23 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/contestmaster?schema=public"
+DATABASE_URL="postgresql://user:password@localhost:5432/contestmaster?schema=public"
 
-# Application
+# JWT Configuration (REQUIRED - No fallback)
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production-min-32-chars"
+JWT_EXPIRES_IN="24h"
+
+# Server Configuration
 PORT=3000
-NODE_ENV=development
+NODE_ENV="development"
 
-# JWT (for future authentication)
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-JWT_EXPIRES_IN="7d"
+# CORS Configuration
+CORS_ORIGIN="http://localhost:3000"
+
+# File Upload Configuration
+MAX_FILE_SIZE=10485760
+
+# Bcrypt Configuration
+BCRYPT_ROUNDS=10
+
+# Rate Limiting (optional)
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10
